--- a/scss/rs-header.scss
+++ b/scss/rs-header.scss
@@ -120,6 +120,7 @@ header {
 			justify-content: center;
 			align-items: flex-start;
 			padding: 20px 0px 15px;
+			border-bottom-color: transparent;
 		}
 
 		@media (max-width: 991.98px) {
