--- a/scss/rs-style.scss
+++ b/scss/rs-style.scss
@@ -110,7 +110,7 @@ body {
 @import "./base/_modal";
 // @import "./base/_datepicker";
 // @import "./base/_light-gallery";
-// @import "./base/_spollers";
+@import "./base/_spollers";
 // @import "./base/_tabs";
 @import "./base/_pagging";
 // @import "./base/_select";
