--- a/css/rs-header.css
+++ b/css/rs-header.css
@@ -134,6 +134,7 @@ header {
         -ms-flex-align: start;
             align-items: flex-start;
     padding: 20px 0px 15px;
+    border-bottom-color: transparent;
   }
 }
 @media (max-width: 991.98px) {
