--- a/css/rs-product-slider.css
+++ b/css/rs-product-slider.css
@@ -50,8 +50,8 @@
 @media (min-width: 1439.98px) {
   .rs-product-slider__slide {
     -webkit-box-flex: 1;
-        -ms-flex: 1 1 25%;
-            flex: 1 1 25%;
+        -ms-flex: 1 1 calc(25% - 15px);
+            flex: 1 1 calc(25% - 15px);
   }
   .rs-product-slider__slide .product {
     max-width: 364px;
