--- a/scss/base/_breadcrumbs.scss
+++ b/scss/base/_breadcrumbs.scss
@@ -1,9 +1,9 @@
 .rs-breadcrumbs {
 	position: relative;
-	margin-top: 14px;
+	margin-top: 30px;
 
-	@media (max-width: 991.98px){
-		  margin-top: 3px;
+	@media (max-width: 991.98px) {
+		margin-top: 15px;
 	}
 
 	// .rs-breadcrumbs__container
@@ -23,20 +23,11 @@
 
 	// .rs-breadcrumbs__item
 	&__item {
-		font-weight: 400;
-		font-size: 20px;
-		line-height: 120%;
+		font-weight: 300;
+		font-size: 16px;
 		letter-spacing: 0.03em;
-		color: #fff;
+		color: #c4c4c4;
 		transition: all 0.3s ease 0s;
-
-		@media (max-width: 1439.98px) {
-			font-size: 18px;
-		}
-
-		@media (max-width: 1169.98px) {
-			font-size: 16px;
-		}
 
 		@media (max-width: 991.98px) {
 			font-size: 13px;
@@ -47,11 +38,12 @@
 	&__link {
 		display: flex;
 		align-items: center;
+
 		&:after {
-			content: "—";
+			content: "/";
 			display: block;
 			transition: all 0.3s ease 0s;
-			margin: 0px 5px 4px;
+			margin: 0px 10px 0px;
 		}
 	}
 }
