--- a/css/rs-features.css
+++ b/css/rs-features.css
@@ -1,19 +1,19 @@
 .rs-features {
-  padding: 112px 0px 65px;
+  margin: 112px 0px 65px;
 }
 @media (max-width: 1439.98px) {
   .rs-features {
-    padding: 80px 0px;
+    margin: 80px 0px;
   }
 }
 @media (max-width: 1169.98px) {
   .rs-features {
-    padding: 60px 0px;
+    margin: 60px 0px;
   }
 }
 @media (max-width: 991.98px) {
   .rs-features {
-    padding: 40px 0px;
+    margin: 40px 0px;
   }
 }
 .rs-features__slider {
