--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -51,6 +51,20 @@ h2 {
 	}
 }
 
+h3 {
+	font-weight: 400;
+	font-size: 35px;
+	color: #1b2336;
+
+	@media (max-width: 1439.98px) {
+		font-size: 30px;
+	}
+
+	@media (max-width: 1169.98px) {
+		font-size: 24px;
+	}
+}
+
 h4 {
 	font-family: "Cormorant Garamond", sans-serif;
 	font-variant-numeric: lining-nums proportional-nums;
@@ -102,6 +116,67 @@ p {
 
 	@media (max-width: 1169.98px) {
 		font-size: 13px;
+	}
+}
+
+ul.marker-list {
+	li {
+		font-weight: 300;
+		font-size: 17px;
+		line-height: 150%;
+		letter-spacing: 0.03em;
+		color: #727272;
+		padding-left: 17px;
+		position: relative;
+
+		@media (max-width: 1439.98px) {
+			font-size: 14px;
+		}
+
+		@media (max-width: 1169.98px) {
+			font-size: 13px;
+		}
+
+		&::before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			display: block;
+			width: 7px;
+			height: 6px;
+			background-image: url("../img/icons/marker.svg");
+			background-repeat: no-repeat;
+			background-position: center;
+			background-size: contain;
+			margin: 10px 10px 0px 0px;
+
+			@media (max-width: 1439.98px) {
+				margin-top: 7px;
+			}
+		}
+
+		&:not(:last-child) {
+			margin-bottom: 10px;
+
+			@media (max-width: 991.98px) {
+				margin-bottom: 10.7px;
+			}
+		}
+
+		a[data-popup] {
+			transition: color 0.3s ease 0s;
+
+			@media (any-hover: hover) {
+				&:hover {
+					color: #c80151;
+				}
+			}
+		}
+
+		span {
+			color: #774653;
+		}
 	}
 }
 
@@ -344,6 +419,19 @@ p {
 		}
 	}
 
+	&__btn {
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 25px;
+		height: 25px;
+
+		svg {
+			width: 100%;
+			height: 100%;
+		}
+	}
+
 	// .form__footer
 	&__footer {
 		display: flex;
@@ -359,8 +447,8 @@ p {
 
 		.form__button {
 			margin: 0;
-			min-width: 279px;
-			max-width: 279px;
+			min-width: 160px;
+			max-width: 160px;
 
 			@media (max-width: 767.98px) {
 				min-width: 100%;
@@ -391,15 +479,11 @@ p {
 
 	// .form__agreement
 	&__agreement {
-		font-weight: 400;
-		font-size: 16px;
-		line-height: 120%;
+		font-weight: 300;
+		font-size: 14px;
+		line-height: 150%;
 		letter-spacing: 0.03em;
-		color: #3c3c3c;
-
-		@media (max-width: 1439.98px) {
-			font-size: 14px;
-		}
+		color: #727272;
 
 		@media (max-width: 991.98px) {
 			font-size: 12px;
@@ -434,33 +518,27 @@ p {
 	width: 100%;
 	transition: 0.3s ease 0s;
 	transition-property: background-color, border-color;
-	border: 1px solid #dbdbdb;
 	background-color: #fff;
-	border-radius: 5px;
-	padding: 20px 30px;
-	font-family: "Tilda Sans", sans-serif;
-	font-weight: 400;
-	font-size: 20px;
-	line-height: 120%;
-	letter-spacing: 0.03em;
-	color: #000;
-
-	@media (max-width: 1699.98px) {
-		font-size: 18px;
-		padding: 20px;
-	}
+	font-family: "Rubik", sans-serif;
+	font-weight: 300;
+	font-size: 17px;
+	line-height: 150%;
+	letter-spacing: 0.05em;
+	color: #774653;
+	padding-bottom: 13px;
+	border-bottom: 1px solid #d9d9d9;
 
 	@media (max-width: 1439.98px) {
-		font-size: 16px;
+		font-size: 14px;
+		padding-bottom: 10px;
 	}
 
 	@media (max-width: 1169.98px) {
 		font-size: 13px;
-		padding: 15px 10px;
 	}
 
 	&::placeholder {
-		color: #dbdbdb;
+		color: #727272;
 	}
 
 	&._form-focus {
@@ -482,3 +560,102 @@ textarea.rs-input {
 }
 
 // Block  ========================================================================================================================================================
+.product {
+	width: 100%;
+	height: 100%;
+	position: relative;
+
+	@media (any-hover: hover) {
+		&:hover {
+			.product__item {
+				background-color: rgba(243, 208, 209, 0.1);
+				border: 1px solid #ae9cab;
+			}
+			.product__more {
+				opacity: 1;
+			}
+		}
+	}
+
+	a {
+		display: block;
+		width: 100%;
+		height: 100%;
+	}
+
+	// .product__item
+	&__item {
+		width: 100%;
+		height: 100%;
+		padding: 38.5px 25px;
+		background-color: #fff;
+		border: 1px solid transparent;
+		border-radius: 30px;
+		transition: all 0.3s ease 0s;
+
+		@media (max-width: 1439.98px) {
+			padding: 30px;
+		}
+
+		@media (max-width: 1169.98px) {
+			padding: 20px;
+		}
+
+		@media (max-width: 991.98px) {
+			padding: 10px;
+		}
+	}
+
+	// .product__img
+	&__img {
+		max-width: 314px;
+		max-height: 314px;
+		margin: 0 auto;
+		width: 100%;
+		height: 100%;
+
+		@media (max-width: 991.98px) {
+			max-width: 225px;
+			max-height: 225px;
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+
+	// .product__desc
+	&__desc {
+		margin-top: 15px;
+		text-align: center;
+
+		@media (max-width: 991.98px) {
+			margin-top: 10px;
+		}
+
+		p {
+			margin-top: 5px;
+		}
+	}
+
+	// .product__more
+	&__more {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		opacity: 0;
+		background-color: transparent;
+		backdrop-filter: blur(16px);
+		transition: all 0.3s ease 0s;
+
+		.rs-btn._btn-second {
+			border-color: #ae9cab;
+			backdrop-filter: blur(16px);
+			background: rgba(255, 255, 255, 0.05);
+			color: #774653;
+		}
+	}
+}
