--- a/scss/base/_spollers.scss
+++ b/scss/base/_spollers.scss
@@ -3,12 +3,35 @@
 	&__item {
 		&:not(:last-child) {
 			margin-bottom: 32px;
+
+			@media (max-width: 1439.98px) {
+				margin-bottom: 28px;
+			}
+
+			@media (max-width: 1169.98px) {
+				margin-bottom: 24px;
+			}
+
+			@media (max-width: 991.98px) {
+				margin-bottom: 20px;
+			}
+		}
+
+		@media (max-width: 991.98px) {
+			&:last-child {
+				.spollers__title {
+					padding-bottom: 0px;
+					border-bottom: none;
+				}
+			}
 		}
 	}
 
 	// .spollers__title
 	&__title {
 		width: 100%;
+		text-align: left;
+		cursor: pointer;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
@@ -19,8 +42,24 @@
 		color: #774653;
 		border-bottom: 1px solid #d9d9d9;
 		padding-bottom: 15px;
+		transition: padding 0.3s ease 0s;
+
+		@media (max-width: 1439.98px) {
+			font-size: 18px;
+		}
+
+		@media (max-width: 1169.98px) {
+			font-size: 16px;
+		}
+
+		@media (max-width: 991.98px) {
+			font-size: 13px;
+			padding-bottom: 9px;
+		}
 
 		&._spoller-active {
+			padding-bottom: 15px;
+
 			i:before {
 				transform: translate(-50%, -50%) rotate(-90deg);
 			}
@@ -38,6 +77,27 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+
+		@media (max-width: 1439.98px) {
+			max-width: 28px;
+			max-height: 28px;
+			min-width: 28px;
+			min-height: 28px;
+		}
+
+		@media (max-width: 1169.98px) {
+			max-width: 22px;
+			max-height: 22px;
+			min-width: 22px;
+			min-height: 22px;
+		}
+
+		@media (max-width: 991.98px) {
+			max-width: 15px;
+			max-height: 15px;
+			min-width: 15px;
+			min-height: 15px;
+		}
 
 		&::before,
 		&::after {
@@ -60,34 +120,5 @@
 	// .spollers__body
 	&__body {
 		margin-top: 20px;
-
-		ul {
-			li {
-				font-weight: 300;
-				font-size: 17px;
-				line-height: 150%;
-				letter-spacing: 0.03em;
-				color: #727272;
-				display: flex;
-				align-items: flex-start;
-
-				&::before {
-					content: "";
-					position: relative;
-					display: block;
-					width: 7px;
-					height: 6px;
-					background-image: url("../../img/icons/marker.svg");
-					background-repeat: no-repeat;
-					background-position: center;
-					background-size: contain;
-					margin: 10px 10px 0px 0px;
-				}
-
-				&:not(:last-child) {
-					margin-bottom: 10px;
-				}
-			}
-		}
 	}
 }
