--- a/scss/blocks/rs-news.scss
+++ b/scss/blocks/rs-news.scss
@@ -13,8 +13,50 @@
 		padding: 20px 0px 0px;
 	}
 
+	&.rs-news-page {
+		padding: 80px 0px 0px;
+
+		@media (max-width: 1439.98px) {
+			padding: 50px 0px 0px;
+		}
+
+		@media (max-width: 991.98px) {
+			padding: 40px 0px 0px;
+		}
+	}
+
 	// .rs-news__container
 	&__container {
+	}
+
+	&__block {
+		margin-top: 30px;
+
+		@media (max-width: 991.98px) {
+			margin-top: 20px;
+		}
+	}
+
+	&__list {
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		gap: 30px 56px;
+
+		@media (max-width: 1439.98px) {
+			gap: 20px;
+		}
+
+		@media (max-width: 1169.98px) {
+			grid-template-columns: repeat(3, 1fr);
+		}
+
+		@media (max-width: 991.98px) {
+			grid-template-columns: repeat(2, 1fr);
+		}
+
+		@media (max-width: 539.98px) {
+			grid-template-columns: repeat(1, 1fr);
+		}
 	}
 
 	// .rs-news__slider
