--- a/scss/blocks/rs-slider.scss
+++ b/scss/blocks/rs-slider.scss
@@ -42,6 +42,7 @@
 
 	// .rs-slider__slider
 	&__slider {
+		width: 100%;
 		height: 0%;
 		transition: height 1s cubic-bezier(0.48, 0, 0.48, 1);
 		transition-delay: 0.5s;
